leftnavbar with full sized clickable anchors, better padding, weight font reduced, overall looks polished fixed background added for contrast, hideable on SM or XS bootstrap-based sizes.

--- a/app/assets/stylesheets/colors.scss
+++ b/app/assets/stylesheets/colors.scss
@@ -36,3 +36,6 @@ $lime-green : rgb(143, 199,10);
 $orange : rgb(237, 165, 13);
 $turquoise : rgb(8, 224, 173);
 $sand : rgb(245, 239, 237);
+
+$left-navbar-background: #f0f0f0;
+$left-navbar-drawer-background: darken($left-navbar-background, 6%);
